# controllers/user_controller.go
@@ -17,39 +17,49 @@ import (
 
 type (
 	LoginInput struct {
-		Username string `json:"username" binding:"required" example:"admin"`
-		Password string `json:"password" binding:"required" example:"admin"`
+		Username string `json:"username" binding:"required" example:"admin" extensions:"x-order=0"`
+		Password string `json:"password" binding:"required" example:"admin" extensions:"x-order=1"`
 	}
 
 	RegisterInput struct {
-		Username 	string `json:"username" binding:"required" example:"admin"`
-    Password 	string `json:"password" binding:"required" example:"admin"`
-    Email    	string `json:"email" binding:"required" example:"admin@mail.com"`
-    Role    	string `json:"role" binding:"required" example:"Admin"`
+		Username 	string `json:"username" binding:"required" example:"admin" extensions:"x-order=0"`
+    Password 	string `json:"password" binding:"required" example:"admin" extensions:"x-order=1"`
+    Email    	string `json:"email" binding:"required" example:"admin@mail.com" extensions:"x-order=2"`
+    Role    	string `json:"role" binding:"required" example:"Admin" extensions:"x-order=3"`
+	}
+
+	ChangePasswordInput struct {
+		Username 						string `json:"username" binding:"required" example:"admin" extensions:"x-order=0"`
+    CurrentPassword 		string `json:"current_password" binding:"required" example:"admin" extensions:"x-order=1"`
+    NewPassword 				string `json:"new_password" binding:"required" example:"admin1" extensions:"x-order=2"`
+    ConfirmNewPassword 	string `json:"confirm_new_password" binding:"required" example:"admin1" extensions:"x-order=3"`
 	}
 
 	LoginResponse struct {
-		Message 	string 	`json:"message" example:"login success"`
+		Message 	string 	`json:"message" example:"login success" extensions:"x-order=0"`
 		User 			struct {
 			Username string `json:"username" example:"John"`
 			Email    string `json:"email" example:"john@example.com"`
 			Role     string `json:"role" example:"user"`
-		} `json:"user"`
-		Token 		string 	`json:"token" example:"string"`
+		} `json:"user" extensions:"x-order=1"`
+		Token 		string 	`json:"token" example:"string" extensions:"x-order=2"`
 	}
 
 	RegisterResponse struct {
-		Message 	string 	`json:"message" example:"registration success"`
+		Message 	string 	`json:"message" example:"registration success" extensions:"x-order=0"`
 		User 			struct {
 			Username string `json:"username" example:"John"`
 			Email    string `json:"email" example:"john@example.com"`
-			Role     string `json:"role" example:"user"`
-		} `json:"user"`
-		
+			Role     string `json:"role" example:"Admin"`
+		} `json:"user" extensions:"x-order=1"`
+	}
+
+	ChangePasswordResponse struct {
+		Message		string 	`json:"message" example:"change password success"`
 	}
 )
 
-// @Summary Login as as user.
+// @Summary Login as user.
 // @Description Logging in to get jwt token to access admin or user api by roles.
 // @Tags Auth
 // @Param Body body LoginInput true "the body to login a user"
@@ -125,5 +135,43 @@ func Register(c *gin.Context) {
 	c.JSON(http.StatusCreated, gin.H{"message": "registration success", "user": user})
 }
 
+// @Summary Change user password.
+// @Description Change user password by inputting the current password and the new password.
+// @Tags Auth
+// @Param Body body ChangePasswordInput true "the body to change user password"
+// @Produce json
+// @Success 200 {object} ChangePasswordResponse
+// @Router /change-password [post]
+func ChangePassword(c *gin.Context) {
+	db := c.MustGet("db").(*gorm.DB)
+	var input ChangePasswordInput
 
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
 
+	if input.NewPassword != input.ConfirmNewPassword {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "new password should match confirm new password"})
+		return
+	}
+
+	u := models.User{}
+	u.Password = input.CurrentPassword
+
+	_, err := models.LoginCheck(input.Username, input.CurrentPassword, db)
+	_ = db.Model(models.User{}).Where("username = ?", input.Username).Take(&u).Error
+
+	if err != nil {
+		fmt.Println(err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": "username or password is incorrect."})
+		return
+	}
+
+	if _, err := u.UpdateUser(input.NewPassword, db); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"message": "change password success"})
+}
